Added simple fragment to activity

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">SimpleFragmentUseApp</string>
+    <string name="show_details_button_label">Show details</string>
+    <string name="workout_title">Title</string>
+    <string name="workout_description">Description</string>
 </resources>
